--- a/task.ini
+++ b/task.ini
@@ -9,17 +9,17 @@ status=done
 max_pages=20
 
 [task.snapshot]
-status=failed
+status=done
 wait_strategy=networkidle
 
 [task.axe_scan]
-status=pending
+status=done
 include=wcag2a,wcag2aa
 
 [task.filter]
-status=pending
+status=done
 level=AA
 
 [task.report]
-status=pending
+status=done
 format=html
