--- a/task.ini
+++ b/task.ini
@@ -1,8 +1,9 @@
 [global]
-base_url=http://localhost:4200
+base_url=https://webapp.agnav.ie
 standard=wcag2aa
 output_dir=./output
 engine=playwright
+auto_run_after_crawl=true
 
 [task.crawl]
 status=done
