--- a/task.ini
+++ b/task.ini
@@ -14,13 +14,13 @@ status=done
 wait_strategy=networkidle
 
 [task.axe_scan]
-status=done
+status=pending
 include=wcag2a,wcag2aa
 
 [task.filter]
-status=done
+status=pending
 level=AA
 
 [task.report]
-status=done
+status=pending
 format=html
