--- a/task.ini
+++ b/task.ini
@@ -1,5 +1,5 @@
 [global]
-base_url=https://webapp.agnav.ie
+ ; base_url removed — provide base URL via environment variable `A11Y_BASE_URL`
 standard=wcag2aa
 output_dir=./output
 engine=playwright
